11155
Previously,
```scala
Welcome to Scala version 2.9.3 (OpenJDK 64-Bit Server VM, Java 1.6.0_34).
Type in expressions to have them evaluated.
Type :help for more information.

scala> def f = { class C(protected implicit val s: String, i: Int) () }
f: Unit

scala> def f = { class C(implicit s: String)
     | () }
<console>:2: error: traits or objects may not have parameters
       () }
       ^
```
but now
```scala
scala> def f = { class C(implicit s: String)
     | new C()("c") }
f: AnyRef

scala> def f = { class C(implicit s: String)
     | () }
ReplGlobal.abort: unexpected opening parenthesis
```
